2009-05-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (reorder-brother): Handle
	root-frame correctly.

	* clfswm.asd: Dependency fix for clfswm-generic-mode.

	* src/clfswm-circulate-mode.lisp (reorder-child)
	(reorder-brother): Handle empty frames.
	(reorder-brother): Redisplay only the parent frame of the  current
	child.

	* src/clfswm-util.lisp (frame-toggle-maximize): Redisplay only the
	parent frame of the  current frame.

2009-05-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (frame-toggle-maximize): New function:
	Maximize/Unmaximize the current frame in its parent frame.

	* src/clfswm-layout.lisp (maximize-layout): New layout: Maximize
	windows and frames in there parent frame.

2009-05-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Add support for Clozure Common Lisp (CCL).

	* src/clfswm-circulate-mode.lisp (reorder-child)
	(reorder-brother): Reinitialise on circulate type change
	child to brother or brother to child.

	* src/*.lisp (*): Use map-window instead of xlib:map-window. So
	calls xlib:display-finish-output on each map-request. So speed up
	the window display.

	* src/xlib-util.lisp (map-window): New function. Call
	xlib:display-finish-output on each map request.

2009-04-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (sm-handle-motion-notify):
	Optimisation when drawing second mode window.

2009-04-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (circulate-mode): Optimisation in
	window redraw.

2009-04-22  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-program-from-query-string): Launch
	command only with a return validation.

2009-04-22  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-query.lisp (query-string): Use a generic mode.

2009-04-19  Xavier Maillard  <xma@gnu.org>

	* src/clfswm-info.lisp (info-mode): Use generic-mode for info-mode.
